# AgentBox

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml
admin-ui/: Dockerfile  nginx.conf  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
admin-ui/src/: App.tsx  index.css
admin-ui/src/components/containers/: status-badge.tsx
admin-ui/src/components/layout/: header.tsx  sidebar.tsx
admin-ui/src/context/: auth-context.tsx
admin-ui/src/hooks/: use-container-logs.ts  use-container-query.ts  use-containers.ts  use-skills.ts  use-stats.ts
admin-ui/src/lib/: api-client.ts  skill-manifest.ts  types.ts  utils.ts
admin-ui/src/pages/: container-create.tsx  container-detail.tsx  container-list.tsx  dashboard.tsx  login.tsx  skill-create.tsx  skill-edit.tsx  skill-list.tsx
admin-ui/src/router/: index.tsx
agent-image/: Dockerfile  entrypoint.sh
cc-sdk-local/: .cargo_vcs_info.json  Cargo.toml
cc-sdk-local/src/: query.rs
control-plane/: Cargo.toml
control-plane/src/: auth.rs  config.rs  error.rs  main.rs  redact.rs
control-plane/src/api/: containers.rs  health.rs  mod.rs  query.rs  skills.rs  ws.rs
control-plane/src/db/: sqlite.rs
control-plane/src/docker/: lifecycle.rs  manager.rs  mod.rs
control-plane/src/models/: container.rs  mod.rs  skill.rs
sdk/: .env.example  demo.ts  package-lock.json  package.json  tsconfig.json
sdk/src/: agentbox.ts  errors.ts  index.ts  sse.ts  types.ts
sidecar/: Cargo.toml
sidecar/src/: health.rs  main.rs  query.rs  reporter.rs  runner.rs
(+10 files in other folders)
